src/css/style.scss
$font-stack: Calibri, sans-serif;
$primary-color: #b22222;
$secondary-color: firebrick;
$primary-dark: #000;
$secondary-dark: #000;
$primary-light: #FAF9F6;
$secondary-light: rgb(225, 225, 225);

// MIX IN EXAMPLE
// @mixin headerAlign($align: left) {
//     display: flex;
//     text-align: $align;
// }
// @include headerAlign;

// NESTING EXAMPLE
// .header-nav {
// 	>a {
// 		font-size: .9rem;
// 		padding-right: 10px;
// 		text-decoration: none;
// 		transition: all 0.5s;
// 		-webkit-transition: all 0.5s;
// 		&:link {
// 			color: #000;
// 		}
// 		&:visited {
// 			color: rgb(56, 40, 40);
// 		}
// 		&:active {
// 			font-size: 0.95rem;
// 		}
// 	}
// }

// EXTENSION EXAMPLE
// %parallax-menu-hero {
//     // code
// }
// @extend %parallax-menu-hero;

*,
*::after,
*::before {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
body {
    font-family: $font-stack;
}
@mixin flexJustify($spacing: space-between) {
        display: flex;
        justify-content: $spacing;
    }
    
#header {
    background-color: $primary-color;
    @include flexJustify;
    padding: 10px 20px;
    color: $primary-light
}
#headerRight {
    @include flexJustify;
    align-items: center;
    gap: 20px;
}
#addTask {
    position: relative;
}
#add-icon {
    width: 30px;
}
#add-icon-menu {
    display: none;
    position: absolute;
    top: 24px;
    right: 15px;
    width: 90px;
    height: 50px;
    z-index: 9998;
    border: #000 solid 1px;
    background-color: white;
    border-radius: 10px;
    & > img {
        width: 25px;
        height: 25px;
    }
    &.icon-menu-toggle {
        display: flex;
        justify-content: space-evenly;
        align-items: center;
    }
}

$shadowSize: 23px;
$shadowColor: $primary-color;
.aside-item {
    position: relative;
    border-radius: 4px;
    &:hover {
        
        background-image: linear-gradient(to left, rgba(255,0,0,0), $primary-color);
        // color: white;
      }
}

#dash-aside {
    padding: .5rem;
    text-align: center;
    transition: all 300ms;
}
.aside-selected {
    background: $primary-color;
    color: white;
    box-shadow: 10px 0 1px $primary-color;
    &:before {
        content: "";
        position: absolute;
        top: 50%;
        right: -8px;
        width: 23px;
        height: 23px;
        background-color: $primary-color;
        transform: translate(50%, -50%) rotate(45deg);
        clip-path: polygon(
          -#{$shadowSize} -#{$shadowSize}, 
      calc(100% + #{$shadowSize}) -#{$shadowSize}, 
          calc(100% + #{$shadowSize}) calc(100% + #{$shadowSize})
        );
      }
}
#project-accordion{
  cursor: pointer;
  background: none;
  background: rgb(178,34,34);
        background: linear-gradient(90deg, rgba(178,34,34,1) 0%, rgba(178,34,34,1) 80%, rgba(0,0,0,0) 100%);
//   background-image: linear-gradient(to left, rgba(255,0,0,0), $primary-color);
  color: white;
  border-radius: 4px;
  width: 100%;
  border: none;
  transition: 0.4s;
  padding: .5rem;
    transition: all 300ms;
    &:hover {
        background-image: linear-gradient(to left, rgba(255,0,0,0), $primary-color);
        // color: white;
      }
    &.active{
        background-color:  $primary-color;
        color: white;
    }
}
#project-panel-display {
  padding: 0 8px;
  display: none;
  background-color: white;
  overflow: hidden;
}
#project-panel-list > * {
    padding: 8px 0;
}

//MAIN
#main {
    display: grid;
    grid-template-columns: minmax(150px,1fr) 4fr;
    grid-template-rows: minmax(calc(100vh - 38px),1fr)
}
#main-aside {
    grid-column: 1 / 2;
    background-color: $secondary-light;
    display: flex;
    flex-direction: column;
    padding: 30px;
    gap: 20px;
    box-shadow: rgba(9, 30, 66, 0.25) 0px 2px 4px 2px;
    z-index: 3;
}
#main-section {
    grid-column: 2 / 5;
    background-color: $primary-light;
    display: flex;
    flex-direction: column;
    gap: 20px;
    padding: 40px;
}
#main-content {
    display: grid;
    grid-template-columns: repeat(2,1fr);
    gap: 20px;
}

#main-header {
    font-size: 1.5rem;
    padding-bottom: 20px;
    border-bottom: #000 2px solid;
}

.task-card {
    padding: 20px;
    // border: #000 solid 1px;
    border-radius: 10px;
    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
    position: relative;
    transition: all 250ms;
    &:hover{
        box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px 3px, rgba(9, 30, 66, 0.08) 0px 0px 0px 3px;
    }
}
.task-card > * {
    padding-bottom: 5px;
}
.task-title {
    font-size: 1.2rem;
    font-weight: bold;
    border-bottom: $primary-dark 1px solid;
    margin-bottom: 10px;
}
.task-delete {
    position: absolute;
    top: 15px;
    right: 15px;
}


.add_task_section,
.add_project_section {
    display: none;
    /* hide for now */
    width: 100vw;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 9999;
    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(4px);
    align-items: center;
}

.form-container {
    width: max-content;
    max-width: 100vw;
    max-height: 100vh;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    font-size: 1rem;
    text-align: start;
    padding: 1rem 1rem;
    border: solid 1px #d3d3d3;
    border-radius: 5px;
    position: relative;
    background-color: #fff;
    overflow-y: scroll;
}
.form-container > * {
    padding-bottom: 1rem;
}
.close-form {
    position: absolute;
    right: 5px;
    &:hover {
        cursor: pointer;
      }
}
.form_title {
    font-size: 1.5rem;
    text-align: center;
    padding-top: 0;
    text-transform: capitalize;
    color: #000;
    font-weight: 500;
}
.new-task-buttons {
    margin: 0 auto;
}
.new-task-buttons > * {
    padding: .5rem;
}

